Change page background

--- a/quiz/css/main.css
+++ b/quiz/css/main.css
@@ -4,15 +4,13 @@ body
 	padding: 0;
 	color: #555;
 	font: normal 10pt Arial,Helvetica,sans-serif;
-	background: #EFEFEF;
+	background: #EFEFEF url('../images/gray_jean.png');
 }
 
 #page
 {
 	margin-top: 5px;
 	margin-bottom: 5px;
-	background: white;
-	border: 1px solid #C9E0ED;
 }
 
 #header
@@ -20,6 +18,10 @@ body
 	margin: 0;
 	padding: 0;
 	border-top: 3px solid #C9E0ED;
+}
+
+.logo {
+	height: 100px;
 }
 
 #content
