--- a/quiz/css/main.css
+++ b/quiz/css/main.css
@@ -251,3 +251,10 @@ div.search-form
 {
 	background: #80CFFF;
 }
+pre {
+	-webkit-user-select: none;
+	-khtml-user-select: none;
+	-moz-user-select: none;
+	-o-user-select: none;
+	user-select: none;
+}
