--- a/quiz/css/main.css
+++ b/quiz/css/main.css
@@ -7,7 +7,7 @@ body {
 	position: relative;
 	z-index: 0;
 	width: 100%;
-	color: #555;
+	color: #333;
 	font: normal 10pt Arial,Helvetica,sans-serif;
 	background: #EFEFEF url('../images/gray_jean.png');
 }
@@ -37,6 +37,9 @@ body {
 	padding: 0;
 	border-top: 3px solid #C9E0ED;
 }
+a {
+	text-decoration: underline;
+}
 
 .logo {
 }
@@ -53,8 +56,7 @@ body {
 
 #footer
 {
-	padding: 10px;
-	margin: 10px 20px;
+	padding: 15px 0;
 	font-size: 0.8em;
 	text-align: center;
 	border-top: 1px solid #C9E0ED;
@@ -248,6 +250,29 @@ div.search-form
 .operations li a:visited
 {
 	color: #0066A4;
+}
+.user-avatar {
+	height: 50px;
+	width: 50px;
+	background-image: url('../images/anonymous.jpg');
+	box-shadow: inset 0px 0px 10px 5px #888;
+	background-position: center center;
+	background-repeat: no-repeat;
+	background-repeat: round;
+	border: 1px solid #fff;
+	border-radius: 5px;
+	float: right;
+	margin:0 0 0 15px;
+}
+.user-name {
+	text-align: right;
+	float:right;
+}
+.user-name strong {
+	font-size: 1.2em;
+	text-shadow: 1px 1px 0px #fff;
+	font-weight: normal;
+	font-family: 'Lobster', cursive !important;
 }
 
 .operations li a:hover
