Add Results admin grid

--- a/quiz/css/main.css
+++ b/quiz/css/main.css
@@ -274,7 +274,9 @@ div.search-form
 	font-weight: normal;
 	font-family: 'Lobster', cursive !important;
 }
-
+a.btn {
+	text-decoration: none;
+}
 .operations li a:hover
 {
 	background: #80CFFF;
