Change headers line-height

--- a/quiz/css/main.css
+++ b/quiz/css/main.css
@@ -104,6 +104,7 @@ h1 {
 	font-family: 'Lobster', cursive !important;
 	font-weight: normal !important;
 	margin-bottom: 0.6em !important;
+	line-height: 1.4em;
 }
 h3 {
 	color: #888;
