--- a/quiz/css/main.css
+++ b/quiz/css/main.css
@@ -110,7 +110,7 @@ a {
 }
 h1 {
 	text-shadow: 1px 1px 0 #fff;
-	font-family: 'Zantroke', 'Lobster', cursive !important;
+	font-family: 'Zantroke';
 	font-weight: normal !important;
 	margin-bottom: 0.6em !important;
 	line-height: 1.4em;
