--- a/quiz/css/admin.css
+++ b/quiz/css/admin.css
@@ -9,3 +9,18 @@ label.success {
     border-top: 1px solid rgb(229, 229, 229);
     background-color: rgb(245, 245, 245);
 }
+h3 a.edit-link {
+    color: #000;
+}
+h3 a.edit-link span{
+    display:none;
+    font-size: 0.5em;
+    line-height: 0.5em;
+}
+h3 a.edit-link:hover {
+    color: #0088cc;
+    text-decoration: underline;
+}
+h3:hover a.edit-link:hover span {
+    display:inline;
+}
