--- a/quiz/css/main.css
+++ b/quiz/css/main.css
@@ -6,7 +6,9 @@
 	font-weight: normal;
 	font-style: normal;
 }
-
+* {
+	margin: 0;
+}
 html, body {
 	height: 100%;
 }
@@ -19,6 +21,26 @@ body {
 	color: #333;
 	font: normal 10pt Arial,Helvetica,sans-serif;
 	background: #EFEFEF url('../images/gray_jean.png') 0 0 repeat;
+}
+
+  /* Wrapper for page content to push down footer */
+  #wrap {
+    min-height: 100%;
+    height: auto !important;
+    height: 100%;
+    /* Negative indent footer by it's height */
+    margin: 0 auto -142px;
+  }
+
+  /* Set the fixed height of the footer here */
+  #push,
+  #footer {
+    height: 111px;
+
+  }
+.curtain-container {
+	position: relative;
+	z-index: 0;
 }
 .curtain {
 	display: none;
@@ -36,8 +58,7 @@ body {
 }
 #page
 {
-	margin-top: 10px;
-	margin-bottom: 5px;
+	padding: 10px 0 5px 0;
 }
 
 #header
@@ -70,7 +91,6 @@ a {
 	text-align: center;
 	border-top: 1px solid #C9E0ED;
 }
-
 #logo
 {
 	padding: 10px 20px;
@@ -305,6 +325,9 @@ div.search-form
 }
 a.btn {
 	text-decoration: none;
+}
+.logo-span {
+	text-align: left;
 }
 .operations li a:hover
 {
