--- a/quiz/css/main.css
+++ b/quiz/css/main.css
@@ -76,7 +76,6 @@ a {
 
 #content
 {
-    padding: 20px 0 ;
 }
 
 #sidebar
@@ -339,4 +338,32 @@ pre {
 	-moz-user-select: none;
 	-o-user-select: none;
 	user-select: none;
+}
+#counter {
+	position:relative;
+	line-height: 30px;
+	padding-left: 7px;
+}
+#progress {
+	border: 1px solid #ccc;
+	width: 100%;
+	height: 30px;
+	position: relative;
+  background-repeat: repeat-x;
+  -webkit-border-radius: 4px;
+     -moz-border-radius: 4px;
+          border-radius: 4px;
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#fff5f5f5', endColorstr='#fff9f9f9', GradientType=0);
+  -webkit-box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.1);
+     -moz-box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.1);
+          box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.1);
+}
+#bar {
+	height: 28px;
+	background: rgba(125,125,125,0.2);
+	border-bottom: 1px solid #aaa; 
+	border-top: 1px solid #bbb; 
+	position: absolute;
+	top:0;
+	left:0;
 }
