--- a/quiz/css/main.css
+++ b/quiz/css/main.css
@@ -134,6 +134,7 @@ h1 {
 	font-weight: normal !important;
 	margin-bottom: 0.6em !important;
 	line-height: 1.4em;
+	font-size: 2.5em;
 }
 h3 {
 	color: #888;
