И гора говорит: "Нет"

--- a/quiz/css/main.css
+++ b/quiz/css/main.css
@@ -33,10 +33,11 @@ body {
   }
 
   /* Set the fixed height of the footer here */
-  #push,
+  #push {
+	height: 142px;
+  }
   #footer {
     height: 111px;
-
   }
 .curtain-container {
 	position: relative;
